
33. New: SparForte core regression tests passing on Cygwin build.

34. Change: Unstructured scripts no longer require variables to be declared
before use.  This is to make unstructure scripts more convenient for simple
tasks, and to give them different behaviour to structured scripts.

35. Fix: raising an undeclared exception now shows an identifier not declared
error, not a identifier of the wrong class error.

36. New: configure --release flag toggles a development version default prompt or the normal release default prompt, "=>".

37. Fix: Case statements no long require string and character types for corresponding literals, which was causing errors on derrived types.  Now match the semanitcs of the rest of the language.

38. New: logs package. [Tests needed] [Chain support required]

39. Fix: removed comment on waiting after pipelines to cleanup zombied processes.

40. Fix: 2>&1 on a non-existent command no longer crashes due to the Ada.Text_IO package.

41. Change: 2>&1 was limited to the end of a command pipeline, but now may be
used with any command in a pipeline.

42. Change: 2> / 2>> was limited to the end of a command pipeline, but now may be used with any command in a pipeline.

43. Fix: exception messages now appear in gcc format when -g/gcc_errors is used.

44. Fix: Latin-1 support fixed in string literals: => "cmd", cmd "param".  The high ASCII charaters are still escaped in error messages.

45. Fix: env shows limited and constant variables with the appropriate word.

46. Fix: declared but never used errors are working again.

47. Change: volatiles are no longer allowed in expressions (to avoid side-effects).  See #48.

48. New: double-write data race side-effects not allowed in function calls or type contracts.

49. New:

50. New: copies declarations (similar to renaming declarations).  Can be used to safely copy volatiles. [docs needed] [tests needed]

51. New: pragma restriction( no_risky_side_effects ) to enable side-effects checking.
