@@ -742,6 +742,14 @@ procedure ParseFactor( f : out unbounded_string; kind : out identifier ) is
           err( "array index must be a scalar type" );
        end if;                                   -- variables are not
        if isExecutingCommand then                -- declared in syntax chk
+          -- expression side-effect prevention
+          if restriction_no_risky_side_effects then
+             if lastExpressionInstruction <= identifiers( t ).writtenOn then
+                err( to_string( identifiers( t ).name ) & " is not " &
+                     optional_bold( "volatile" ) & " but was written to after " &
+                     "evaluating the start of the expression" );
+               end if;
+          end if;
           arrayIndex := long_integer(to_numeric(f));  -- convert to number
           --array_id2 := arrayID( to_numeric(      -- array_id2=reference
           --   identifiers( array_id ).value ) );  -- to the array table
@@ -785,6 +793,14 @@ procedure ParseFactor( f : out unbounded_string; kind : out identifier ) is
        if token = symbol_t and then identifiers( token ).value.all = "(" then
          err( optional_bold( to_string( identifiers( t ).name ) ) &
              " has an array index but is not an array" );
+       end if;
+       -- expression side-effect prevention
+       if restriction_no_risky_side_effects then
+          if lastExpressionInstruction <= identifiers( t ).writtenOn then
+             err( to_string( identifiers( t ).name ) & " is not " &
+                  optional_bold( "volatile" ) & " but was written to after " &
+                  "evaluating the start of the expression" );
+          end if;
        end if;
        f := identifiers( t ).value.all;
        kind := identifiers( t ).kind;
@@ -1649,7 +1665,13 @@ procedure ParseExpression( ex : out unbounded_string; expr_type : out identifier
   last_op  : identifier := eof_t;
   b        : boolean;
   type bitwise_number is mod 2**64;
+  oldExpressionInstruction : line_count := lastExpressionInstruction;
 begin
+  -- expression side-effects.  Remember how many lines have run prior to this
+  -- expression to determine if variables in the expression were altered
+  -- later than this line.  Remember that expressions can be nested.
+  -- If not checking side-effects, this will be zer0.
+  lastExpressionInstruction := perfStats.lineCnt;
   ParseRelation( re1, kind1 );
   ex := re1;
   expr_type := kind1;
@@ -1748,6 +1770,9 @@ begin
      last_op := operator;
   end loop;
   ex := re1;
+  -- expression side-effects: we're now whatever the previous expression
+  -- instruction was.
+  lastExpressionInstruction := oldExpressionInstruction;
   --put_line( "Expression value = " & to_string( ex ) );
 end ParseExpression;
 
@@ -2000,7 +2025,7 @@ begin
                      identifiers( array_id ).avalue'first'img & " .. " & identifiers( array_id ).avalue'last'img );
                  when STORAGE_ERROR =>
                    err( gnat.source_info.source_location &
-                     ": internal error : storage error raised in ParseFactor" );
+                     ": internal error : storage error raised in ParseStaticFactor" );
                  end;
               end if;
            end if;
@@ -2784,7 +2809,8 @@ end ParseStaticExpression;
 
 procedure startParser is
 begin
-  null;
+  -- expression side-effect detection: no expressions have run yet.
+  lastExpressionInstruction := noExpressionInstruction;
 end startParser;
 
 
