@@ -691,7 +691,7 @@ begin
      -- we don't track record fields, only the record
      if identifiers( identifiers( id  ).field_of ).writtenByThread /= noThread then
         if identifiers( identifiers( id ).field_of ).writtenByThread /= getThreadName then
-           err( "style issue: " & to_string( identifiers( identifiers( id ).field_of ).name &
+           err( to_string( identifiers( identifiers( id ).field_of ).name &
                 " (in " & optional_bold( to_string( getThreadName ) ) &
                 ") is also changed by " &
                 optional_bold( to_string( identifiers( identifiers( id ).field_of ).writtenByThread ) ) &
@@ -702,7 +702,7 @@ begin
   else
      if identifiers( id ).writtenByThread /= noThread then
         if identifiers( id ).writtenByThread /= getThreadName then
-           err( "style issue: " & to_string( identifiers( id ).name &
+           err( to_string( identifiers( id ).name &
                 " (in " & optional_bold( to_string( getThreadName ) ) &
                 ") is also changed by " &
                 optional_bold( to_string( identifiers( id ).writtenByThread ) ) &
