@@ -5125,11 +5125,14 @@ begin
             put_line( standard_error, "]" );
             cmdpos := cmdpos - 2;
          end if;
-      elsif perfOpt then
+      end if;
+      if boolean(perfOpt) or restriction_no_risky_side_effects then
          if not syntax_check and (not exit_block or not error_found) then
             begin
                perfStats.lineCnt := perfStats.lineCnt + 1;
             exception when constraint_error =>
+               -- at 50,000 lines per second, this theoretically happens at
+               -- 5.8 million years on 64-bit Linux.
                err( "performance stats: line count overflow" );
             end;
          end if;
