@@ -1,0 +1,16 @@
+procedure t is
+  pragma restriction( no_risky_side_effects );
+  i : integer := 5;
+
+  exc : exception;
+
+  subtype risky_integer is integer
+     affirm
+       i := 1; -- double-write to global
+       raise exc when risky_integer < 0;
+     end affirm;
+
+begin
+  i := 10; --double-write to global by main
+  ? risky_integer(1);
+end t;
